--- a/.env
+++ b/.env
@@ -18,3 +18,16 @@
 APP_ENV=dev
 APP_SECRET=071d627c8cf8f8962b7baa3def033792
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
+# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+
+# DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=10.6.12-MariaDB&charset=utf8mb4"
+# DATABASE_URL="mysql://root:11piXm000SQL@127.0.0.1:3306/symfonytestapi?serverVersion=10.6.12-MariaDB&charset=utf8mb4"
+###< doctrine/doctrine-bundle ###
